fix(tabs): center the tab label to be horizontally aligned with the icon
fixes #15273

--- a/core/src/components/tabbar/tab-button.scss
+++ b/core/src/components/tabbar/tab-button.scss
@@ -58,6 +58,8 @@
   font-size: var(--label-font-size);
 
   line-height: var(--label-line-height);
+
+  text-align: center;
 }
 
 .tab-btn-icon {
